added enpoint for Merchant History added file for merchant History added function to calculate merchant history
